# See LICENSE file for copyright and license details.

option('TAGBAR_LANG', type : 'combo', choices : ['latin', 'japanese', 'roman'])
option('TERMINAL_APP', type : 'string')
option('LOCKSCREEN_APP', type : 'string')
option('USE_EXPLORER', type : 'boolean', value: false)
option('USE_SCROT', type : 'boolean', value: false)

